--- a/README
+++ b/README
@@ -11,6 +11,10 @@ The css file has all of the colors specifically at the bottom to make it easy to
 
 I will try not to change any css classes in future versions for those of you who customize the css.
 
+Changes Since Version 1.0:
+Moved Nickname field to Account Settings...
+Sorry but it's been a while since I worked on this and am unsure of other changes...
+
 Changes in Version 1.0:
 -[fix?] not sure if the mistake was made after version 9.0, but fixed the issue with a permission error for non-administrators when viewing the profile page.
 -[fix] fixed the 'edit my details' button not appearing for non-admins, made the button appear on all profiles for admins.
